--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,65 @@
+# Mac OS X hidden files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Vim swap files
+.*.sw?
+
+# PhpStorm
+.idea
+
+# vs code
+.vscode
+
+# Sublime Text
+*.sublime-project
+
+# Node
+node_modules
+npm-debug.log
+yarn-error.log
+.phpunit-watcher-cache.php
+.phpunit.result.cache
+
+### Classify ------------------
+
 shell/.yarnrc
 
 environment.sh
 .composer_packages
 .bew_packages
 .npm_packages
+
+tmp/*
+.idea
+/tmp/*
+.DS_Store
+coverage.clover
+.phpunit.result.cache
+errors.txt
+errors.log
+error.txt
+error.log
+_azure.sh
+.env.dev
+transactions-export.csv
+users-export.csv
+users-report.csv
+*.dump
+*.sql
+*.sql--
+notes.md
+storage/debugbar/
+flv_website_dev.*
+flv_website_staging.*
+___notes.md
+__notes.md
+/Users/antonioribeiro/code/accor/extstay/package.json
+*.pem%
+
+
